[gd_scene load_steps=9 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://sprites/white.png" type="Texture" id=2]
[ext_resource path="res://fonts/imported/kenpixel_blocks32.fnt" type="BitmapFont" id=3]
[ext_resource path="res://fonts/imported/kenpixel_blocks24.fnt" type="BitmapFont" id=4]
[ext_resource path="res://scenes/scenery.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/level_generator.gd" type="Script" id=6]

[sub_resource type="CanvasItemShader" id=1]

_code = { "fragment":"//Source: https://github.com/mattdesl/lwjgl-basics/wiki/ShaderLesson3\n\n//RADIUS of our vignette, where 0.5 results in a circle fitting the screen\nuniform float RADIUS = 0.75;\n\n//softness of our vignette, between 0.0 and 1.0\nuniform float SOFTNESS = 0.45;\n\n//determine the vector length of the center position\nfloat len = length(UV-vec2(0.5));\n\n//use smoothstep to create a smooth vignette\nfloat vignette = smoothstep(RADIUS, RADIUS-SOFTNESS, len);\n\n//apply the vignette with 50% opacity\nvec3 texColor = texscreen(SCREEN_UV).rgb;\n\nCOLOR.rgb = mix(texColor, texColor*vignette, 0.5);\n", "fragment_ofs":0, "light":"", "light_ofs":0, "vertex":"", "vertex_ofs":0 }

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = SubResource( 1 )
shader/shading_mode = 0
shader_param/RADIUS = 0.75
shader_param/SOFTNESS = 0.45

[node name="game" type="Node"]

script/script = ExtResource( 1 )

[node name="gui" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="fx_vignette" type="TextureFrame" parent="gui"]

material/material = SubResource( 2 )
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="score" type="Label" parent="gui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 30.0
margin/right = 184.0
margin/bottom = 66.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "001210"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="score2" type="Label" parent="gui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 40.0
margin/top = 80.0
margin/right = 238.0
margin/bottom = 107.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "High: 102312"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="startGame" type="Control" parent="gui"]

editor/display_folded = true
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 80.0
margin/right = -200.0
margin/bottom = -50.0

[node name="lblTitle" type="Label" parent="gui/startGame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 42.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.457947, 0.63085, 0.960938, 1 )
text = "Two Taps Racer"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnPlay" type="Button" parent="gui/startGame"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 80.0
margin/right = 300.0
margin/bottom = 120.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Play!"
flat = false

[node name="gameOver" type="Control" parent="gui"]

editor/display_folded = true
visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 80.0
margin/right = -200.0
margin/bottom = -110.0

[node name="lblOver" type="Label" parent="gui/gameOver"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 42.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.960938, 0.457947, 0.457947, 1 )
text = "Game Over!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="btnPlay" type="Button" parent="gui/gameOver"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 80.0
margin/right = 300.0
margin/bottom = 120.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "New Game"
flat = false

[node name="btnReturn" type="Button" parent="gui/gameOver"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 100.0
margin/top = 140.0
margin/right = 300.0
margin/bottom = 180.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Return"
flat = false

[node name="world" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="scenery" parent="world" instance=ExtResource( 5 )]

[node name="cam_base" type="Spatial" parent="world"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="camera" type="Camera" parent="world/cam_base"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 9, 7 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="level" type="Spatial" parent="world"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 6 )

[node name="vehicle" type="Spatial" parent="world"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="vehicle_ai" type="Spatial" parent="world"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )


